--- a/frontend/src/components/atoms/InputField/InputField.scss
+++ b/frontend/src/components/atoms/InputField/InputField.scss
@@ -2,14 +2,13 @@
 
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: .75rem;
     max-width: 20rem;
-
+    margin-top: .5rem;
 
     &__label {
         color: #525252;
         text-transform: uppercase;
-
     }
 
     &__input-group {
@@ -17,9 +16,10 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        padding: 1rem;
+        padding: 0 1rem;
         border-radius: .5rem;
         border: .15rem solid #c4c4c4;
+        height: 2.5rem;
 
         &:focus-within {
             border-color: #0366d6;
@@ -34,6 +34,9 @@
         &__icon--password {
             cursor: pointer;
             margin-left: auto;
+            &:focus-within {
+                color: #0366d6;
+            }
         }
 
         &__input {
@@ -58,7 +61,6 @@
         align-items: center;
         flex-wrap: wrap;
         gap: .2rem;
-
         &__icon {
             color: crimson;
         }
