--- a/frontend/src/components/atoms/Button/Button.scss
+++ b/frontend/src/components/atoms/Button/Button.scss
@@ -5,7 +5,7 @@
     color: white;
     border-radius: .5rem;
     height: 2.5rem;
-    max-width: 20rem;
+    width: 100%;
     text-align: center;
     vertical-align: middle;
     cursor: pointer;
