--- a/frontend/src/components/atoms/InputField/InputField.scss
+++ b/frontend/src/components/atoms/InputField/InputField.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     gap: .75rem;
-    max-width: 20rem;
+    width: 100%;
     margin-top: .5rem;
 
     &__label {
@@ -33,10 +33,7 @@
 
         &__icon--password {
             cursor: pointer;
-            margin-left: auto;
-            &:focus-within {
-                color: #0366d6;
-            }
+            align-self: flex-end;
         }
 
         &__input {
