--- a/frontend/src/components/atoms/LanguagesSwitch/LanguageSwitch.scss
+++ b/frontend/src/components/atoms/LanguagesSwitch/LanguageSwitch.scss
@@ -1,10 +1,11 @@
-.languages {
+.language-switch {
     
     display: flex;
     flex-direction: row;
-    align-self: flex-start;
-    padding: .5rem 0 0 .5rem;
-    height: 5vh;
+    grid-area: languages;
+    padding: 1rem 0 0 1rem;
+    width: fit-content;
+    height: 2.5vh;
     gap: 1rem;
     
     &__img {
