--- a/frontend/src/components/atoms/LinkButton/LinkButton.scss
+++ b/frontend/src/components/atoms/LinkButton/LinkButton.scss
@@ -1,4 +1,4 @@
-.button {
+.link-button {
     all: unset;
     text-transform: uppercase;
     background-color: #0366d6;
@@ -8,14 +8,9 @@
     height: 3.5rem;
     width: 100%;
     text-align: center;
-    vertical-align: middle;
     cursor: pointer;
-
-    
-    &:disabled {
-        background-color: #c4c4c4;
-        color: #525252;   
-        cursor: not-allowed; 
-    }
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
 }
