--- a/frontend/src/components/molecules/LoginForm/LoginForm.scss
+++ b/frontend/src/components/molecules/LoginForm/LoginForm.scss
@@ -1,64 +1,31 @@
-.login {
+.login-form {
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;  
+    align-items: center;
     align-self: center;
-    height: 70vh;
-    width: 60vw;  
+    gap: .5rem;
+    width: 100%;
+    background-color: #ffffff;
 
-    &__image {
-        display: flex;
-        flex-direction: row;
-        background-color: rgba($color: #ffffff, $alpha: 0.4);
-        border-radius: .2rem 0 0 .2rem;
-        padding: 5rem 0;
-        width: 50%;
-        height: 100%;
-
-        &__img {
-            width: 100%;
-            justify-content: center;
-        }
+    &__img {
+        margin-bottom: 7.5rem;
+        width: 100%;
     }
-
-    @media only screen and (max-width: 80rem) {
-        &__image {
-            display: none;
-        }
-
-        &__form {
-            border-radius: .2rem .2rem;
-        }
+    
+    &__a {
+        all: unset;
+        color: #0366d6;
+        text-transform: uppercase;
+        margin-bottom: .5rem;
+        align-self: flex-start;
+        cursor: pointer;
     }
-
-    &__form {
-        display: flex;
-        flex-direction: column;  
-        align-items: center;
-        align-self: center;
-        width: 50%;
-        height: 100%;
-        gap: .5rem;
-        padding: 3rem 3rem;  
-        background-color: #ffffff;
-        border-radius: 0 .2rem .2rem 0;
-        
-        &__img {
-            width: 50%;
-        }
-        
-        &__a {
-            all: unset;
-            color: #0366d6;
-            text-transform: uppercase;
-            margin-bottom: .5rem;
-            align-self: flex-start;
-            cursor: pointer;
-        }
-        &__p {
-            color: #525252;
-            text-transform: uppercase;
-            justify-self: center;
-        }
+    
+    &__p {
+        color: #525252;
+        text-transform: uppercase;
+        justify-self: center;
     }
+    
 }
