--- a/frontend/src/components/molecules/SideNav/SideNav.scss
+++ b/frontend/src/components/molecules/SideNav/SideNav.scss
@@ -12,9 +12,9 @@
     justify-content: center;
     align-items: center;
     background-color: white;
-    border-right: #525252 solid .05rem;
-    height: 100vh;
-    width: 30vw;
+    border-right: #c4c4c4 solid .05rem;
+    height: 100%;
+    width: 20vw;
 
     &__logo {
         grid-area: logo;
