--- a/frontend/src/components/templates/AuthentificationPage/AuthentificationPage.scss
+++ b/frontend/src/components/templates/AuthentificationPage/AuthentificationPage.scss
@@ -1,16 +1,16 @@
-@import "../../../styles/global.scss";
-
 .authentification-template {
     display: grid;
-    gap: 5rem;
+    gap: 3rem;
     background-color: rgba($color: #0366d6, $alpha: .75);
     grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: .25fr 3fr .5fr;
     grid-template-areas: 
         "languages . ."
         ". main ."
-        ". . .";
+        "footer footer footer";
 
     &__main {
+        height: 100%;
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-area: main;
@@ -34,6 +34,8 @@
                 ".";
             &__img {
                 grid-area: img;
+                width: 100%;
+                height: 100%;
             }
             @media screen and (max-width: 60rem) {
                 visibility: hidden;
@@ -45,9 +47,9 @@
             display: grid;
             background-color: white;
             border-radius: 0 1rem 1rem 0;
+            padding: 2.5rem 2.5rem;
             align-items: center;
             justify-content: center;
-            padding: 5rem;
             @media screen and (max-width: 60rem) {
                 border-radius: 1rem 1rem;
             }
