--- a/frontend/src/components/atoms/LinkButton/LinkButton.scss
+++ b/frontend/src/components/atoms/LinkButton/LinkButton.scss
@@ -14,3 +14,17 @@
     justify-content: center;
     text-align: center;
 }
+
+.link-button--syllabus {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    height: 2.5rem;
+    align-items: center;
+    justify-content: center;
+    color: #525252;
+    background-color: transparent;
+    border: #525252 solid .2rem;
+    grid-area: syllabus-button;
+    margin: 0;
+}
