--- a/frontend/src/components/molecules/forms/LoginForm/LoginForm.scss
+++ b/frontend/src/components/molecules/forms/LoginForm/LoginForm.scss
@@ -5,12 +5,12 @@
     align-items: center;
     align-self: center;
     gap: .5rem;
-    width: 100%;
     background-color: #ffffff;
 
     &__img {
         margin-bottom: 7.5rem;
         width: 100%;
+        height: 100%;
     }
     
     &__a {
