--- a/frontend/src/components/molecules/SideNav/SideNav.scss
+++ b/frontend/src/components/molecules/SideNav/SideNav.scss
@@ -1,24 +1,34 @@
 .side-nav {
+    position: sticky;
     display: grid;
-    grid-template-rows: 1fr .5fr 2fr 3fr 1fr .5fr;
+    grid-template-rows: 1fr .5fr 2fr .5fr 3fr 1fr .5fr;
     row-gap: 1rem;
     grid-template-areas: 
         "languages"
         "." 
-        "logo" 
+        "logo"
+        "welcome-message" 
         "links" 
         "copyright" 
         ".";
     justify-content: center;
     align-items: center;
     background-color: white;
-    border-right: #525252 solid .05rem;
-    height: 100vh;
-    width: 30vw;
+    border-right: #c4c4c4 solid .05rem;
+    height: 100%;
+    width: 20vw;
 
     &__logo {
         grid-area: logo;
         width: 75%;
+        align-self: center;
+        justify-self: center;
+    }
+
+    &__welcome-message {
+        grid-area: welcome-message;
+        color: #525252;
+        font-size: medium;
         align-self: center;
         justify-self: center;
     }
@@ -34,6 +44,7 @@
 
     &__copyright {
         grid-area: copyright;
+        color: #c4c4c4;
         text-align: center;
     }
 
