--- a/frontend/src/components/pages/teacher/OptionalCoursesList/OptionalCoursesList.scss
+++ b/frontend/src/components/pages/teacher/OptionalCoursesList/OptionalCoursesList.scss
@@ -2,6 +2,8 @@
     display: grid;
     row-gap: 5rem;
     grid-template-areas: 
-        "students-list students-list students-list students-list"
-        ". . . excel-button";
+        "dropdown-teacher-list . . . ."
+        ". . . . ."
+        "students-list students-list students-list students-list students-list"
+        ". . . . excel-button";
 }
