--- a/frontend/src/components/atoms/InputField/InputField.scss
+++ b/frontend/src/components/atoms/InputField/InputField.scss
@@ -22,7 +22,7 @@
         height: 3.5rem;
         background-color: white;
 
-        &:focus-within {
+        &:hover {
             border-color: #0366d6;
         }
 
