--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,4 @@
 body {
-  margin: 0;
-  width: 100%;
-  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -16,4 +13,9 @@ code {
 
 html {
   font-size: 62.5%;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
 }
