--- a/frontend/src/components/molecules/SideNav/SideNav.scss
+++ b/frontend/src/components/molecules/SideNav/SideNav.scss
@@ -1,4 +1,5 @@
 .side-nav {
+    position: -webkit-sticky;
     position: sticky;
     display: grid;
     grid-template-rows: 1fr .5fr 2fr .5fr 3fr 1fr .5fr;
@@ -48,6 +49,5 @@
         color: #c4c4c4;
         text-align: center;
     }
-
 
 }
