--- a/frontend/src/components/atoms/DropDown/DropDown.scss
+++ b/frontend/src/components/atoms/DropDown/DropDown.scss
@@ -1,3 +1,5 @@
+$icon: "%3Csvg /%3E%3C/svg%3E";
+
 .dropdown {
 
     display: flex;
@@ -18,13 +20,21 @@
         outline: none;
         &:focus {
             border-color: #0366d6;
+            background-image: url('./angle-circle-arrow-down-focus.svg');
+        }
+        &:hover {
+            border-color: #0366d6;
+            background-image: url('./angle-circle-arrow-down-focus.svg');
         }
         padding: 0 1rem;
         border-radius: .5rem;
         border: .15rem solid #c4c4c4;
         height: 3.5rem;
+        background: url('./angle-circle-arrow-down.svg') no-repeat right center;
+        background-size: 2rem;
+        background-position: 97% 50%;
         background-color: white;
-        color: #525252;
+
     }
 
 }
