--- a/frontend/src/components/molecules/Modal/Modal.scss
+++ b/frontend/src/components/molecules/Modal/Modal.scss
@@ -1,36 +1,50 @@
 .modal {
-    display: flex;
-    flex-direction: column;
-    padding: .5rem;
-    border: solid #c4c4c4 .1rem;
-    border-radius: .5rem;
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba($color: #000000, $alpha: 0.5);
     z-index: 10;
-    
-    &__header {
+
+    &__content {
+        background-color: white;
+        margin-left: auto;
+        margin-bottom: auto;
+        width: 50%;
+        height: 50%;
         display: flex;
-        flex-direction: row;
-        width: 100%;
-        gap: 20rem;
-        padding-bottom: .5rem;
-        border-bottom: solid #c4c4c4 .1rem;
-
-        &__icon {
-            color: #525252;
-            width: 1.25rem;
-            height: 1.25rem;
-            line-height: 1.25rem;
-            border-radius: 50%;
-            vertical-align: middle;
-            padding: .1rem;
-            margin-left: auto;
-            cursor: pointer;
-            &:hover {
-                background-color: #c4c4c4;
+        flex-direction: column;
+        gap: 2.5rem;
+        padding: 1rem;
+        border: solid #c4c4c4 .1rem;
+        border-radius: .5rem;
+        &__header {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            gap: 20rem;
+            padding-bottom: .5rem;
+            border-bottom: solid #c4c4c4 .1rem;
+    
+            &__icon {
+                color: #525252;
+                width: 1.25rem;
+                height: 1.25rem;
+                line-height: 1.25rem;
+                border-radius: 50%;
+                vertical-align: middle;
+                padding: .1rem;
+                margin-left: auto;
+                cursor: pointer;
+                &:hover {
+                    background-color: #c4c4c4;
+                }
             }
-        }
-
-        &__title {
-            color: #525252;
+    
+            &__title {
+                color: #525252;
+            }
         }
     }
 }
