--- a/frontend/src/components/pages/teacher/Courses/Courses.scss
+++ b/frontend/src/components/pages/teacher/Courses/Courses.scss
@@ -1,9 +1,14 @@
-.optional-courses-list {
+.courses {
     display: grid;
     row-gap: 5rem;
     grid-template-areas: 
         "dropdown-teacher-list . . . ."
         ". . . . ."
         "students-list students-list students-list students-list students-list"
-        ". . . . excel-button";
+        ". . mail-button . excel-button";
+
+    &__modal-content {
+        display: flex;
+        flex-direction: column;
+    }
 }
