--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,18 +1,8 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
 
 html {
   font-size: 62.5%;
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 html, body {
