--- a/frontend/src/components/molecules/Modal/Modal.scss
+++ b/frontend/src/components/molecules/Modal/Modal.scss
@@ -1,5 +1,8 @@
 .modal {
     position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     left: 0;
     top: 0;
     right: 0;
@@ -9,8 +12,8 @@
 
     &__content {
         background-color: white;
-        margin-left: auto;
-        margin-bottom: auto;
+        align-self: center;
+        justify-self: center;
         width: 50%;
         height: 50%;
         display: flex;
