--- a/frontend/src/components/atoms/LinkButton/LinkButton.scss
+++ b/frontend/src/components/atoms/LinkButton/LinkButton.scss
@@ -27,4 +27,8 @@
     border: #525252 solid .2rem;
     grid-area: syllabus-button;
     margin: 0;
+    &:hover {
+        background-color: #525252;
+        color: white;
+    }
 }
