--- a/frontend/src/components/molecules/Modal/Modal.scss
+++ b/frontend/src/components/molecules/Modal/Modal.scss
@@ -45,5 +45,9 @@
                 }
             }
         }
+        &__children {
+            overflow-y: scroll;
+            overflow-x: hidden;
+        }
     }
 }
