--- a/frontend/src/components/molecules/forms/CreateOptionsListForm/CreateOptionsListForm.scss
+++ b/frontend/src/components/molecules/forms/CreateOptionsListForm/CreateOptionsListForm.scss
@@ -20,7 +20,7 @@
         font-size: x-large;
         color: #525252;
       }
-      &__options {
+      &__courses {
         display: flex;
         flex-direction: column;
         gap: .5rem;
