--- a/frontend/src/components/templates/AccountsPage/AccountsPage.scss
+++ b/frontend/src/components/templates/AccountsPage/AccountsPage.scss
@@ -5,4 +5,10 @@
     gap: 2rem;
     margin-bottom: 5rem;
   }
+
+  &__lists {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+  }
 }
