--- a/frontend/src/components/molecules/lists/AccountsList/AccountsList.scss
+++ b/frontend/src/components/molecules/lists/AccountsList/AccountsList.scss
@@ -1,8 +1,16 @@
 .accounts-list {
   width: 100%;   
+  display: flex;
+  flex-direction: column;
   font-size: medium;
   color: #525252; 
   grid-area: accounts-list;
+
+  &__title {
+    font-size: larger;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
+  }
 
   &__header {
       display: grid;
@@ -10,9 +18,9 @@
       padding-bottom: 1rem;
       margin-bottom: 2.5rem;
       text-transform: uppercase;
-      grid-template-columns: .1fr 2fr 2fr 2fr;
+      grid-template-columns: .1fr 2fr;
       grid-template-areas: 
-          "header-index header-email header-role header-status";
+          "header-index header-email";
 
       &__index {
           grid-area: header-index;
@@ -21,21 +29,19 @@
       &__email {
           grid-area: header-email;
       }
-
-      &__role {
-        grid-area: header-role;
-      }
-
-      &__status {
-        grid-area: header-status;
-      }
   }
 
   &__item {
+      padding: .75rem 0;
       display: grid;
-      grid-template-columns: .1fr 2fr 2fr 2fr;
+      grid-template-columns: .1fr 2fr;
       grid-template-areas: 
-          "item-index item-email item-role item-status";
+          "item-index item-email";
+
+      cursor: pointer;
+      &:hover {
+        background-color: #f1eff1;
+      }
       
       &__index {
           grid-area: item-index;
@@ -45,17 +51,6 @@
           grid-area: item-email;
       }
 
-      &__role {
-        grid-area: item-role;
-      }
 
-      &__status {
-        grid-area: item-status;
-      }
-
-  }
-
-  &__item :not(:last-child) {
-      padding-bottom: 1rem;
   }
 }
