--- a/frontend/src/components/molecules/forms/UserDataForm/UserDataForm.scss
+++ b/frontend/src/components/molecules/forms/UserDataForm/UserDataForm.scss
@@ -1,3 +1,8 @@
 .user-data-form {
   padding: 1rem;
+  &__fields-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
