--- a/frontend/src/components/molecules/forms/LoginForm/LoginForm.scss
+++ b/frontend/src/components/molecules/forms/LoginForm/LoginForm.scss
@@ -17,6 +17,7 @@
     all: unset;
     color: #0366d6;
     text-transform: uppercase;
+    border-bottom: #0366d6 .1rem solid;
     margin-bottom: .5rem;
     align-self: flex-start;
     cursor: pointer;
