--- a/frontend/src/components/molecules/forms/RegistrationForm/RegistrationForm.scss
+++ b/frontend/src/components/molecules/forms/RegistrationForm/RegistrationForm.scss
@@ -18,6 +18,7 @@
     color: #0366d6;
     text-transform: uppercase;
     margin-bottom: .5rem;
+    border-bottom: #0366d6 .1rem solid;
     cursor: pointer;
   }
   &__p {
